--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -4,7 +4,7 @@
         <div class="container mx-auto flex justify-center px-5">
             <div class="flex flex-col justify-center w-full mx-auto container p-6 sm:p-12 rounded-3xl drop-shadow-lg bg-white max-w-xl">
                 <!-- LOGIN HEADER -->
-                <h3 class="mx-auto text-rose-500 text-3xl font-bold  mb-6">Login</h3>
+                <h3 class="mx-auto text-primary text-3xl font-bold  mb-6">Login</h3>
                 <!-- FORM -->
                 <form method='post' class="flex justify-center mx-auto w-full">
                     {% csrf_token %}
@@ -19,7 +19,7 @@
                                    required
                                    placeholder="Email"
                                    id="id_email"
-                                   class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-rose-500 focus:outline-0 focus:ring-0">
+                                   class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <!-- PASSWORD FIELD -->
                         <div class="flex flex-col">
@@ -30,10 +30,10 @@
                                    required
                                    placeholder="Password"
                                    id="id_password"
-                                   class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-rose-500 focus:outline-0 focus:ring-0">
+                                   class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <button type="submit"
-                                class="bg-rose-500 py-auto px-6 rounded-full h-12 flex items-center font-bold text-white text-center justify-center">
+                                class="bg-primary py-auto px-6 rounded-full h-12 flex items-center font-bold text-white text-center justify-center">
                             Login
                         </button>
                     </div>
