checkpoint: squash later, todo fix airports list

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -141,5 +141,7 @@
         <script src="{% static 'js/base.js' %}"></script>
         <!-- FLOWBITE CSS FRAMEWORK -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
+        {% block scripts %}
+        {% endblock scripts %}
     </body>
 </html>
