--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load static %}
 {% block content %}
     <!-- BODY BACKGROUND -->
     <div class="w-screen h-full bg-gray-100">
@@ -13,7 +14,7 @@
             <div class="container p-8 mx-auto h-auto flex items-center rounded-3xl drop-shadow-lg bg-white">
                 <!-- FORM CONTRAINER -->
                 <div class="container mx-auto">
-                    <form action="{% url 'search-results' %}" method="get">
+                    <form action="{% url 'search-results' %}" method="get" autocomplete="off">
                         {% csrf_token %}
                         <!-- INNER FORM CONTAINER -->
                         <div class="">
@@ -40,16 +41,32 @@
                                 </fieldset>
                             </div>
                             <div class="grid grid-cols-4 gap-3">
-                                <input type="text"
-                                       name="origin"
-                                       id=""
-                                       placeholder="Origin"
-                                       class="col-span-full sm:col-span-2 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
-                                <input type="text"
-                                       name="destination"
-                                       id=""
-                                       placeholder="Destination"
-                                       class="col-span-full sm:col-span-2 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
+                                <div class="col-span-full sm:col-span-2 relative">
+                                    <input type="text"
+                                           name="origin"
+                                           id="origin"
+                                           placeholder="Origin"
+                                           class="z-20 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
+                                    <div id="airports-list"
+                                         class="hidden absolute top-1/2 border-2 w-full p-4 pt-8 z-10 rounded-b-3xl bg-gray-100">
+                                        <div>
+                                            {% for airport in airports %}<div>{{ airport }}</div>{% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-span-full sm:col-span-2 relative">
+                                    <input type="text"
+                                           name="destination"
+                                           id="destination"
+                                           placeholder="Destination"
+                                           class="z-20 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm">
+                                    <div id="airports-list1"
+                                         class="hidden absolute top-1/2 border-2 w-full p-4 pt-8 z-10 rounded-b-3xl bg-gray-100">
+                                        <div>
+                                            {% for airport in airports %}<div>{{ airport }}</div>{% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- OUTBOUND DATE-->
                                 <input type="text"
                                        name="date_outbound"
@@ -85,3 +102,6 @@
         </div>
     </div>
 {% endblock content %}
+{% block scripts %}
+    <script src="{% static 'js/flight_search.js' %}"></script>
+{% endblock scripts %}
