style: modify styles; add svg to homepage

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -53,7 +53,7 @@
                 <div class="flex gap-4">
                     <!-- HEADER LOGO -->
                     <div class="w-20 flex items-center">
-                        <img src="/static/img/flyux-logo.png" alt="" height="" />
+                        <a href="{% url 'home-page' %}"><img src="/static/img/flyux-logo.png" alt="" height="" /></a>
                     </div>
                     <!-- NAV ITEMS -->
                     <div class="hidden sm:flex items-center justify-self-center">
