--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -10,9 +10,6 @@
                 <p class="text-center text-lg text-text">We can bring you anywhere!*</p>
                 <p class="text-center text-xs mt-6 text-text">*almost</p>
             </div>
-            <div class="absolute top-20 border-2 w-full">
-                <img class="mx-auto" src="{% static 'img/planes-home.svg' %}" alt="" width="1000">
-            </div>
             <!-- OUTER CONTAINER FOR FORM -->
             <div class="container p-8 mx-auto h-auto flex items-center rounded-3xl drop-shadow-lg bg-white">
                 <!-- FORM CONTRAINER -->
@@ -76,9 +73,7 @@
                                 <input type="text"
                                        name="date_outbound"
                                        id="flatpickr-date-outbound"
-                                       class="flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
-                                       type="text"
-                                       placeholder="Outbound Date"
+                                       class="flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"                                       placeholder="Outbound Date"
                                        data-id="datetime"
                                        readonly="readonly">
                                 <!-- RETURN DATE -->
@@ -86,7 +81,6 @@
                                        name="date_return"
                                        id="flatpickr-date-return"
                                        class="flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
-                                       type="text"
                                        placeholder="Return Date"
                                        data-id="datetime"
                                        readonly="readonly">
