--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 {% block content %}
-    <div class="bg-gray-100 h-full flex items-center">
+    <div class="bg-gray-100 w-screen m-auto mx-auto flex items-center">
         <div class="container mx-auto flex justify-center px-5">
             <div class="flex flex-col justify-center w-full mx-auto container p-6 sm:p-12 rounded-3xl drop-shadow-lg bg-white max-w-xl">
                 <!-- LOGIN HEADER -->
