refactor: clean search feature code

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -71,14 +71,14 @@
                                 </div>
                                 <!-- OUTBOUND DATE-->
                                 <input type="text"
-                                       name="date_outbound"
+                                       name="outbound_date"
                                        id="flatpickr-date-outbound"
                                        class="flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"                                       placeholder="Outbound Date"
                                        data-id="datetime"
                                        readonly="readonly">
                                 <!-- RETURN DATE -->
                                 <input type="text"
-                                       name="date_return"
+                                       name="return_date"
                                        id="flatpickr-date-return"
                                        class="flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                        placeholder="Return Date"
